expanded document relations and openapi documentation
